--- a/templates/about.html
+++ b/templates/about.html
@@ -5,9 +5,13 @@
 {% endblock %}
 
 {% block main %}
-    <p>this this a final project for cs50</p>
-    <p>we want to make something needed in real life</p>
+    <p>this this a final project for cs50 based on finance50, thanks really</p>
+    <p>I want to make something needed in real life,thought it's simple</p>
     <p>first goal of Noty50 is to make share information between multy devices as convienent as possible</p>
     <p>so no register need,no login needed</p>
-    <p>we still improve this,if you have other idea,tell us. or best make your own </p>
+    <p>I concentrate on the note function,so the file share function is very  bare-bones</p>
+    <p>I still improve this,if you have other idea,tell us. or best make your own </p>
+    <p>this was planed to develope with a man,but he seems do nothing,only wait for me,not want to add some new,not check code security,so I delete his code part</p>
+    <p>code not good looking,but if you need, https://github.com/iuyals/final50 </p>
+    <p>any suggestions is appreciated</p>
 {% endblock %}
