--- a/templates/error.html
+++ b/templates/error.html
@@ -7,7 +7,7 @@
 {% block main %}
 
     <div id="error_message">
-        <p> Error {{ error_code }} </p>
+        <p> Code {{ error_code }} </p>
         <p> {{ message }} </p>
     </div>
 
