--- a/templates/file.html
+++ b/templates/file.html
@@ -28,7 +28,7 @@
             <tbody>
                 {% for row in filelist %}
                 <tr>
-                    <td><a href="getfile?filename={{ row[0] }}">{{ row[0] }}</a></td>
+                    <td><a href="static/files/{{ row[0] }}">{{ row[0] }}</a></td>
                     <td>{{ row[1] }}MB</td>
                     <td>{{ row[2] }}</td>
                     <td>{{ row[3] }}</td>
