--- a/templates/layout.html
+++ b/templates/layout.html
@@ -6,23 +6,8 @@
 
         <!-- Required meta tags -->
         <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
-        <!-- Add icon library -->
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
-        <!-- documentation at http://getbootstrap.com/docs/4.1/, alternative themes at https://bootswatch.com/ -->
-        <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet">
-
-        <!-- https://favicon.io/emoji-favicons/money-mouth-face/ -->
-        <link href="/static/todo.ico" rel="icon">
-
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"
         <link href="/static/styles.css" rel="stylesheet">
-
-        <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
-
         <title>Noty  {% block title %}{% endblock %}</title>
 
     </head>
