--- a/templates/note.html
+++ b/templates/note.html
@@ -7,7 +7,7 @@ Note
 {% block main %}
 
 <div id="do_notediv">
-    <form action="searchnote" method="get">
+    <form action="note" method="get">
         <div class="input-group mb-3">
             <input type="text" name="keyword" id="searchinbox" class="form-control" placeholder="Search for a note"
                 autofocus aria-label="Recipient's username" aria-describedby="basic-addon2">
@@ -17,7 +17,7 @@ Note
         </div>
     </form>
 
-    <form action="savenote" method="post" id="savenoteform">
+    <form action="note" method="post" id="savenoteform">
         <div class="form-group" id="notebox">
             <textarea class="noborder" id="noteinbox" name="note" placeholder="Take a note here" rows="4"></textarea>
             <p></p>
